# writeonce-api

./: .dockerignore  .env.sample  .gitignore  .gitlab-ci.yml  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross  DockerfileLambda  Makefile  Program.cs  README.md  WeatherForecast.cs  appsettings.json  diesel.toml  docker-compose.yml  writeonce-api.csproj  writeonce-fe.Server.csproj
Controllers/: UserDetailController.cs  WeatherForecastController.cs
Properties/: launchSettings.json
doc/: index.html  openapi.json
events/: post.json
infra/: 00-build-image.sh  02-docker-login.sh  03-upload-image.sh  04-ssh-setup.sh  05-deploy.sh
infra/aurora-serverless/: Pulumi.prod.yaml  Pulumi.yaml  README.md  go.mod  main.go
migrations/2024-10-26-110007_create_articles/: up.sql
migrations/2024-10-27-130201_add_articles_content/: down.sql  up.sql
migrations/2024-10-27-131600_add_articles_do_aws_sync/: down.sql  up.sql
migrations/2024-11-12-090859_add_sys_title_contrainst/: down.sql  up.sql
migrations/2024-11-12-101350_add_sys_title_updated_contrainst/: down.sql  up.sql
migrations/2024-11-12-154958_add_time_stamp/: down.sql  up.sql
postgress/: init.sql
src/: db.rs  error_handler.rs  lib.rs  main.rs  models.rs  schema.rs
src/api/: article.rs  image.rs  mod.rs  spec.rs  valid.rs
src/config/: mod.rs
src/lambda/: post_article.rs
src/lamda/: post_article.rs
src/services/: aws.rs  aws_s3.rs  error.rs  mod.rs
