[package]
name = "writeonce-manage-article-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "writeonce-manage-article-api"
path = "src/main.rs"

[dependencies]
actix-web = "4.0"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
url = "2"
chrono = "0.4"
actix-files = "0.6"
############ Diesel #################
diesel = { version = "2.2.0", features = ["postgres","serde_json","r2d2"] }
diesel_migrations = "2.2.0"
r2d2 = "0.8"
thiserror = "1.0"
lazy_static = "1.4"